orchestrator/gocd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gocd-svc
  labels:
    app: gocd
    reason: ci
spec:
  type: LoadBalancer
  selector:
    app: gocd
    reason: ci
  ports:
    - name: http
      protocol: TCP
      port: 8153
      targetPort: 8153
    - name: https
      protocol: TCP
      port: 8154
      targetPort: 8154
