orchestrator/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gocd-nginx
  annotations:
    nginx.ingress.kuberentes.io/client-max-body-size: "5M"
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  backend:
    serviceName: gocd-svc
    servicePort: 8153
  rules:
  - host: poc-gocd.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gocd-svc
          servicePort: 8153
